# tablix

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json
.github/workflows/: pull_request.yml  release.yml
.zed/: settings.json
apps/desktop/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
apps/desktop/src/: App.css  App.tsx  app.css  main.tsx  menubar.ts  routeTree.gen.ts  theme.ts
apps/desktop/src/assets/: index.css
apps/desktop/src/commands/: app.ts  connection.ts  project.ts  query.ts
apps/desktop/src/components/: PopConfirm.tsx  QueryPreview.tsx  SkeletonTable.tsx  ToolbarButton.tsx  new-project-modal.svelte  welcome.svelte
apps/desktop/src/components/ui/: color-mode.tsx  context-menu.tsx  toaster.tsx
apps/desktop/src/context/: ActiveConnectionContext.tsx  ConnectionOutputContext.tsx  ConnectionsContext.tsx  DockTabsContext.tsx  MainTabsContext.tsx  OpenSectionsContext.tsx  ProjectContext.tsx  ProjectsContext.tsx  QueriesContext.tsx  TreeNodeContext.tsx  ViewContext.tsx
apps/desktop/src/features/editor/: Editor.tsx  codemirror.ts  theme.ts  utils.ts
apps/desktop/src/features/explorer/: constants.ts  index.tsx  tree.module.css  types.ts
apps/desktop/src/features/explorer/components/: AddConnectionModal.tsx  ColumnNode.tsx  ConnectionMenu.tsx  ConnectionModal.tsx  ConnectionNode.tsx  ConnectionSpecificFields.tsx  DataSourceContextMenu.tsx  EditConnectionModal.tsx  ExplorerTree.tsx  GeneralPanel.tsx  ModKbd.tsx  SchemaNode.tsx  SslPanel.tsx  TableNode.tsx  TreeChevron.tsx  TreeLabel.tsx
apps/desktop/src/features/explorer/context/: ConnectionsContext.tsx  EditConnectionModalContext.ts  ProjectContext.tsx  form.ts
apps/desktop/src/features/explorer/styles/: DataSourceContextMenu.css  ExplorerTree.css  ExplorerTree.module.css  tree-label.css  tree.module.css
apps/desktop/src/features/queries/: index.tsx
apps/desktop/src/features/queries/components/: AddQueryInput.tsx  (+4 more)
apps/desktop/src/features/welcome/: Welcome.tsx  index.tsx
apps/desktop/src/features/workspace/: index.tsx
apps/desktop/src/lib/: platform.ts  toasts.ts  types.ts  utils.ts
apps/desktop/src/lib/icons/: PostgreSQL.tsx
apps/desktop/src/lib/projects/: project.ts  projects-service.ts
apps/desktop/src/lib/utils/: filename.ts  time.ts
apps/desktop/src/lib/validator/: index.ts  is-host.ts
apps/desktop/src/pages/Welcome/: NewProjectModal.tsx  Welcome.tsx
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte  __root.tsx  index.tsx
apps/desktop/src/routes/workspace/: $projectId.tsx
apps/desktop/src/services/: AppService.ts
apps/desktop/src/services/connections/: index.ts  types.ts
apps/desktop/src/services/pool/: index.ts  types.ts
apps/desktop/src/services/projects/: ProjectsService.ts  index.ts  project.ts  projects.service.ts  types.ts
apps/desktop/src/stores/: appStore.ts  connectionStore.ts  tabStore.ts
apps/desktop/src/styles/: fonts.css
apps/desktop/src/theme/: Input.module.css  Kdb.module.css  Select.module.css  TextInput.module.css  components.ts
crates/dataplus-tauri/: Cargo.toml  tauri.conf.json
crates/tablix-connection/: Cargo.toml
crates/tablix-connection/src/: connection.rs  controller.rs  lib.rs  storage.rs  utils.rs
crates/tablix-project/: Cargo.toml
crates/tablix-project/src/: controller.rs  lib.rs  project.rs  storage.rs
crates/tablix-storage/: Cargo.toml
crates/tablix-storage/src/: lib.rs
crates/tablix-tauri/: Cargo.toml  tauri.conf.json
crates/tablix-tauri/capabilities/: default.json
crates/tablix-tauri/icons/: icon.icns
crates/tablix-tauri/src/: app.rs  commands.rs  connections.rs  lib.rs  log.rs  logs.rs  main.rs  postgres.rs  projects.rs  queries.rs  query_engine.rs  utils.rs
crates/tablix-tauri/src/dialects/: postgres.rs
crates/tablix-tauri/src/dialects/postgres/: interval.rs
crates/tablix-tauri/src/postgres/: bytes.rs
crates/tablix-tauri/src/query_engine/: commands.rs  pool.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+25 files in other folders)
