[package]
name = "tablix-connection"
version = "0.1.0"
edition = "2024"

[dependencies]
trash = "3"
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

tablix-storage.workspace = true
tablix-project.workspace = true
tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1"] }
dashmap = { version = "6.1.0", features = ["serde"] }
