[package]
name = "tablix"
version = "0.1.0"
authors = ["toshmukhamedov"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tablix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
uuid.workspace = true

tablix-storage.workspace = true
tablix-project.workspace = true
tablix-connection.workspace = true
tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
dashmap = "6.1.0"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.38.0", features = ["db-tokio-postgres"] }
bytes = "1.10.1"
